[gd_scene load_steps=3 format=3 uid="uid://cx5olg3degxr0"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_at7qa"]
[ext_resource type="Script" path="res://addons/OBSControlLibrary/SlideoutContainer/slide_out_container.gd" id="2_ao5wm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_at7qa")

[node name="MainMenuSlideout" type="Container" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ao5wm")
slide_duration = 0.35
transition_type = 4
ease_type = 2

[node name="CPanel" type="PanelContainer" parent="MainMenuSlideout"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuSlideout/CPanel"]
layout_mode = 2

[node name="BTN_StartGame" type="Button" parent="MainMenuSlideout/CPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="BTN_Options" type="Button" parent="MainMenuSlideout/CPanel/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="BTN_Quit" type="Button" parent="MainMenuSlideout/CPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MainMenuSlideout/CPanel/VBoxContainer/BTN_StartGame" to="." method="_on_btn_start_game_pressed"]
[connection signal="pressed" from="MainMenuSlideout/CPanel/VBoxContainer/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="MainMenuSlideout/CPanel/VBoxContainer/BTN_Quit" to="." method="_on_btn_quit_pressed"]
